# dtc-project

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  docker_setup.sh  prefect_setup.sh  pyproject.toml  setup.cfg
dtc_project/: env_variables_setup.sh  prefect_setup.sh  start.py
dtc_project/flows/: dbt_project.yml  deploy_blocks.py  deploy_flows.py  deploy_gcp_blocks.py  deploy_prefect_blocks.py  extract_crimes_data.py  extract_schools_data.py  get_row_data.py  load_data_to_bq.py  run_dbt.py  run_dbt_cloud.py
dtc_project/flows/dbt/models/core/: crimes_around_schools.sql
dtc_project/flows/dbt/models/staging/: schema.yml  stg_street_crimes.sql
dtc_project/keys/: lithe-vault-375510-878d76efab6b.json
dtc_project/terraform/: main.tf  variables.tf
tests/: __init__.py
